src/modules/games/components/provider-links/styles/utils/_vars.scss
$customThemeDefault: () !default;
$themeDefault: map-merge((
    'gridTemplateColumns': 1fr auto auto,
    'gridTemplateAreas': 'title navigation button' 'icons icons icons',
    'gridTemplateAlignment': center,

    'loaderColumn': list.slash(1, 3),

    'wrapperSliderGridArea': icons,

    'wrapperTemplateColumns': repeat(auto-fit, minmax(150px, 1fr)),
    'wrapperGap': (
        375: ef.size(2),
        768: ef.size(3),
    ),

    'titleAlignmentInsideModal': center,

    'swiperPaddingMobCustom': ef.size(2),
    'swiperGridRowsMobCustom': 60px 60px,
    'swiperGridColumnsMobCustom': 1fr 1fr,

    'sliderMargin': ef.size(2) 0 0,
    'sliderContainerMargin': (
        375: -10px -15px -10px -10px,
        768: -12px,
    ),
    'sliderContainerPadding': (
        375: 10px 50px 10px 10px,
        768: 12px,
    ),

    'sliderPseudoDisplay': (
        375: block,
        768: none,
    ),
    'sliderPseudoWidth': ef.size(6),
    'sliderPseudoBackground': linear-gradient(to left, var(--mc-bg), transparent),
    'sliderPseudoTop': 0,
    'sliderPseudoRight': 0,
    'sliderPseudoLeft': auto,
    'sliderPseudoBottom': 0,

    'sliderNavigationGridArea': navigation,
    'sliderNavigationDisplay': (
        375: none,
        768: flex,
    ),

    'sliderButtonGridArea': button,
    'sliderButtonMargin': 0 0 0 ef.size(4),

    'iconBackground': var(--mc-bg700),
    'iconBorderRadius': ef.get('radius', 'biger'),
    'iconColor': var(--mc-baseMain),
    'iconTransition': #{transform 0.2s, box-shadow 2s},
    'iconWidth': 100%,
    'iconMaxWidth': 80%,
    'iconHeight': 100%,
    'iconMaxHeight': 100%,
    'iconWrapPadding': 8px 15px,
    'iconWrapFontSize': ef.get('font', 'big'),
    'iconWrapFontWeight': 700,
    'iconPseudoPaddingTop': 35%,
    'iconHoverTransition': #{transform 0.2s, box-shadow 0.1s},
    'iconHoverTransform': translate3d(0, -3px, 0),
    'iconHoverBoxShadow': 0 1px 5px var(--mc-bg100),

    // TODO remove after come up with color icons
    'iconColorBackground': #777,
    'iconColorFilter': contrast(1.5),

    'gridTemplateAreasAdaptive': 'title' 'icons' 'button',
    'gridTemplateColumnsAdaptive': 1fr,
    'gridGapAdaptive': ef.size(4),

    'wrapperMaxWidthAdaptive': (
        375: 100%,
        560: 520px,
    ),
    'wrapperMarginAdaptive': 0 auto,
    'wrapperTemplateAdaptive': repeat(2, minmax(150px, 1fr)),

    'buttonMarginAdaptive': ef.size(2) auto 0,

    'errorLineHeight': 1.15,

    'sliderWolfRoundedBtnMargin': (
        375: 0,
        768: 0 ef.size(3) 0 0,
    ),

    'wrapperTemplateWolf': (
        375: repeat(auto-fit, minmax(170px, 1fr)),
        768: repeat(auto-fit, minmax(200px, 1fr)),
    ),
    'wrapperGapWolf': (
        375: ef.size(2),
        768: ef.size(6),
    ),
    'linkItemWolfBorderRadius': ef.get('radius', 'main'),
    'linkItemHoverWolfBackground': var(--mc-bg500),
    'linkItemInfoWolfFontStyle': 'CaptionText',
    'linkItemInfoMobileWolfFontStyle': 'SignText',
    'linkItemInfoWolfColor': var(--mc-baseMain),
    'linkItemInfoWolfMargin': ef.size(3) 0 0,
    'titleWolfFontStyle': 'SecondTitleBold',
    'titleMobileWolfFontStyle': 'ThirdTitleBold',
    'titleWolfColor': var(--mc-baseSecond),
    'titleWolfMargin': (
        375: ef.size(2) 0,
        768: 0 0 ef.size(6),
    ),
    'linkItemWolfHeight': 140px,
    'linkItemImageWolfWidth': (
        375: 140px,
        768: 160px,
    ),
    'linkItemImageWolfHeight': (
        375: 60px,
        768: 70px,
    )
), $customThemeDefault);

$customMobileApp: () !default;
$themeMobileApp: map-merge((
    'gridTemplateAlignment': center,

    'loaderColumn': list.slash(1, 3),

    'wrapperTemplateColumns': repeat(auto-fit, minmax(125px, 1fr)),
    'wrapperGap': (
        375: ef.size(2),
        768: ef.size(3),
    ),

    'iconBackground': var(--mc-bg700),
    'iconBorderRadius': ef.get('radius', 'small'),
    'iconColor': var(--mc-baseMain),
    'iconTransition': #{transform 0.2s, box-shadow 2s},
    'iconWidth': 100%,
    'iconMaxWidth': 80%,
    'iconHeight': 100%,
    'iconMaxHeight': 100%,
    'iconWrapPadding': 8px 15px,
    'iconWrapFontSize': ef.get('font', 'big'),
    'iconWrapFontWeight': 700,
    'iconPseudoPaddingTop': 73%,
    'iconHoverTransition': #{transform 0.2s, box-shadow 0.1s},
    'iconHoverTransform': translate3d(0, -3px, 0),
    'iconHoverBoxShadow': 0 1px 5px var(--mc-bg100),

    // TODO remove after come up with color icons
    'iconColorBackground': #777,
    'iconColorFilter': contrast(1.5),

    'gridTemplateAreasAdaptive': 'title' 'icons' 'button',
    'gridTemplateColumnsAdaptive': 1fr,
    'gridGapAdaptive': ef.size(4),

    'wrapperMaxWidthAdaptive': (
        375: 320px,
        560: 520px,
    ),
    'wrapperMarginAdaptive': 0 auto,
    'wrapperTemplateAdaptive': repeat(2, minmax(150px, 1fr)),

    'buttonMarginAdaptive': ef.size(2) auto 0,
), $customMobileApp);

